feat: make OOP and add linkage on map

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
+    <script defer src="workoutClasses.js"></script>
+    <script defer src="appClass.js"></script>
     <script defer src="script-values.js"></script>
     <script defer src="script.js"></script>
     <title>Cardio - Map of your trainings</title>
@@ -50,21 +52,21 @@
             <label class="form__label">Duration</label>
             <input
               class="form__input form__input--duration"
-              placeholder="мин"
+              placeholder="min"
             />
           </div>
           <div class="form__row">
             <label class="form__label">Temp</label>
             <input
               class="form__input form__input--temp"
-              placeholder="шаг/мин"
+              placeholder="steps/min"
             />
           </div>
           <div class="form__row form__row--hidden">
             <label class="form__label">Climb</label>
             <input
               class="form__input form__input--climb"
-              placeholder="метров"
+              placeholder="meters"
             />
           </div>
           <button class="form__btn">OK</button>
