--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     <div class="sidebar">
       <img src="/icon.png" alt="icon" class="icon" />
       <ul class="workouts">
+        <form class="sort">
+          <label class="sort__label">Sort by: </label>
+          <select class="sort__input sort__input--type">
+            <option value="id" selected>None</option>
+            <option value="distance">Distance</option>
+            <option value="duration">Duration</option>
+            <option value="date">Date</option>
+          </select>
+        </form>
         <form class="form hidden">
           <div class="form__row">
             <label class="form__label">Type</label>
